--- a/Alpha/current/style.css
+++ b/Alpha/current/style.css
@@ -6,13 +6,21 @@ h1 {
   opacity: 0.9;
 }
 button {
+  color: red;
   opacity: 0.8;
   height: 10rem;
   width: 10rem;
   font-style: 100px;
   font-size: 3em;
+  transition-timing-function: steps;
+  transition: margin-top 2s ease-in 0.2s;
 }
-.button {
-  display: flex;
-  justify-content: center;
+.btn {
+  padding: 2rem;
+  margin: 0 50%;
+}
+button:hover {
+  border-radius: 50%;
+  background-color: cyan;
+  margin-top: 400px;
 }
